# spider

./: .gitignore  Pipfile
aliexpress/: .goreleaser.yml  Makefile  go.mod  go.sum  main.go
colly/: go.mod  go.sum  main.go  x.go
colly/public/: index.html
data/: cookie.json  search.txt
poetry/: pyproject.toml
puppeteer/: README.md  REAEME.md  creds.js  index.js  keepa.js  music163.js  package.json  phone.txt  selector.js  ssmgr.js  whatsapp.js
putter/: index.js
spiderman/: .gitignore  .goreleaser.yml  README.md  go.mod  go.sum  main.go
spiderman/clients/: whatsapp.go
spiderman/cmd/: root.go  weibo.go  whatsapp.go
spiderman/model/: feishu.go  weibo.go
spiderman/pkg/lark/: lark.go
spiderman/pkg/logger/: logger.go
spiderman/pkg/weibo/: weibo.go
spiderman/services/: weibo.go  whatsapp.go
spiderman/whatsapp/: whatsapp.go
src/: chr.py  t.py
