[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["fitzix <caojunkaiv@gmail.com>"]

[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.1"
python-dotenv = "^0.10.3"
flask-apscheduler = "^1.11.0"
kubernetes = "^10.0.1"
flask-sqlalchemy = "^2.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
